Setting up needed plugins for publishing, testing workflow
Signed-off-by: Knut-Erik Johnsen <abstract@knut-erik.org>

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
 
+    <url>https://crossplane.io/</url>
     <description>Crossplane parent pom for composite functions</description>
 
     <properties>
@@ -144,7 +145,74 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                    <tokenAuth>true</tokenAuth>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+
+    <developers>
+        <developer>
+            <name>Knut-Erik Johnsen</name>
+            <organization>Crossplane</organization>
+            <organizationUrl>https://crossplane.io</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/crossplane/function-sdk-java.git</connection>
+        <developerConnection>scm:git:ssh://github.com:crossplane/function-sdk-java.git</developerConnection>
+        <url>https://github.com/crossplane/function-sdk-java/tree/main</url>
+    </scm>
 </project>
