--- a/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_environmentconfigs.yaml
+++ b/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_environmentconfigs.yaml
@@ -24,13 +24,8 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: |-
-          An EnvironmentConfig contains user-defined unstructured values for
-          use in a Composition.
-
-
-          Read the Crossplane documentation for
-          [more information about EnvironmentConfigs](https://docs.crossplane.io/latest/concepts/environment-configs).
+        description: A EnvironmentConfig contains a set of arbitrary, unstructured
+          values.
         properties:
           apiVersion:
             description: |-
