--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <doclint>all,missing</doclint>
+                    <excludePackageNames>io.crossplane.compositefunctions.protobuf:io.crossplane.apiextensions.*</excludePackageNames>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
