Add type to workflow input
Signed-off-by: Knut-Erik Johnsen <abstract@knut-erik.org>

--- a/.github/workflows/maven-release.yaml
+++ b/.github/workflows/maven-release.yaml
@@ -1,9 +1,10 @@
 name: Java CI with Maven
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       releaseversion:
+        type: string
         description: 'Version to reelase'
         required: true
 
