--- a/.github/workflows/maven-release.yaml
+++ b/.github/workflows/maven-release.yaml
@@ -1,7 +1,7 @@
 name: Release a new version
 
 on:
-  workflow_call:
+  workflow_dispatch: 
     inputs:
       releaseversion:
         type: string
