--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.3.1</version>
+    </parent>
 
     <groupId>io.crossplane.compositefunctions</groupId>
     <artifactId>crossplane-parent</artifactId>
@@ -20,13 +25,16 @@
         <maven.compiler.source>17</maven.compiler.source>
 
         <!-- Dependency versions -->
+        <spring-boot.version>3.3.1</spring-boot.version>
         <kubernetes-client.version>6.13.0</kubernetes-client.version>
         <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
-        <protobuf.version>4.27.0</protobuf.version>
+        <protobuf.version>3.25.1</protobuf.version>
         <grpc.version>1.64.0</grpc.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
         <slf4j.version>2.0.13</slf4j.version>
         <jackson-databind.version>2.17.1</jackson-databind.version>
+        <bouncycastle.version>1.77</bouncycastle.version>
+        <grpc-spring-boot-starter.version>3.1.0.RELEASE</grpc-spring-boot-starter.version>
 
         <!-- Plugin versions -->
         <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
@@ -41,6 +49,8 @@
         <module>crossplane-crd-model</module>
         <module>crossplane-protobuf-model</module>
         <module>crossplane-function-base</module>
+        <module>crossplane-function-springboot-starter</module>
+        <module>crossplane-function-example</module>
     </modules>
 
     <dependencyManagement>
@@ -55,7 +65,17 @@
                 <artifactId>crossplane-protobuf-model</artifactId>
                 <version>${revision}</version>
             </dependency>
+            <dependency>
+                <groupId>io.crossplane.compositefunctions</groupId>
+                <artifactId>crossplane-function-base</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
+            <dependency>
+                <groupId>io.crossplane.compositefunctions</groupId>
+                <artifactId>crossplane-function-springboot-starter</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
             <dependency>
                 <groupId>io.fabric8</groupId>
@@ -64,6 +84,8 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+
+
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
@@ -103,6 +125,16 @@
             </dependency>
             <dependency>
                 <groupId>io.grpc</groupId>
+                <artifactId>grpc-services</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-inprocess</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
                 <artifactId>grpc-netty-shaded</artifactId>
                 <version>${grpc.version}</version>
             </dependency>
@@ -120,6 +152,16 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson-databind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk18on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-server-spring-boot-starter</artifactId>
+                <version>${grpc-spring-boot-starter.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
