Upgrade to 1.16, adding the credentialmap and observedgeneration to the crossplane crds
Signed-off-by: Knut-Erik Johnsen <abstract@knut-erik.org>

--- a/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_compositionrevisions.yaml
+++ b/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_compositionrevisions.yaml
@@ -34,8 +34,12 @@ spec:
     schema:
       openAPIV3Schema:
         description: |-
-          A CompositionRevision represents a revision in time of a Composition.
-          Revisions are created by Crossplane; they should be treated as immutable.
+          A CompositionRevision represents a revision of a Composition. Crossplane
+          creates new revisions when there are changes to the Composition.
+
+
+          Crossplane creates and manages CompositionRevisions. Don't directly edit
+          CompositionRevisions.
         properties:
           apiVersion:
             description: |-
@@ -283,7 +287,7 @@ spec:
                               type: string
                             mergeOptions:
                               description: MergeOptions Specifies merge options on
-                                a field path
+                                a field path.
                               properties:
                                 appendSlice:
                                   description: Specifies that already existing elements
@@ -697,7 +701,7 @@ spec:
                                 type: string
                               mergeOptions:
                                 description: MergeOptions Specifies merge options
-                                  on a field path
+                                  on a field path.
                                 properties:
                                   appendSlice:
                                     description: Specifies that already existing elements
@@ -987,6 +991,46 @@ spec:
                 items:
                   description: A PipelineStep in a Composition Function pipeline.
                   properties:
+                    credentials:
+                      description: Credentials are optional credentials that the Composition
+                        Function needs.
+                      items:
+                        description: |-
+                          FunctionCredentials are optional credentials that a Composition Function
+                          needs to run.
+                        properties:
+                          name:
+                            description: Name of this set of credentials.
+                            type: string
+                          secretRef:
+                            description: |-
+                              A SecretRef is a reference to a secret containing credentials that should
+                              be supplied to the function.
+                            properties:
+                              name:
+                                description: Name of the secret.
+                                type: string
+                              namespace:
+                                description: Namespace of the secret.
+                                type: string
+                            required:
+                            - name
+                            - namespace
+                            type: object
+                          source:
+                            description: Source of the function credentials.
+                            enum:
+                            - None
+                            - Secret
+                            type: string
+                        required:
+                        - name
+                        - source
+                        type: object
+                      type: array
+                      x-kubernetes-list-map-keys:
+                      - name
+                      x-kubernetes-list-type: map
                     functionRef:
                       description: |-
                         FunctionRef is a reference to the Composition Function this step should
@@ -1195,7 +1239,7 @@ spec:
                                 type: string
                               mergeOptions:
                                 description: MergeOptions Specifies merge options
-                                  on a field path
+                                  on a field path.
                                 properties:
                                   appendSlice:
                                     description: Specifies that already existing elements
@@ -1477,7 +1521,7 @@ spec:
                       items:
                         description: |-
                           ReadinessCheck is used to indicate how to tell whether a resource is ready
-                          for consumption
+                          for consumption.
                         properties:
                           fieldPath:
                             description: FieldPath shows the path of the field whose
@@ -1570,6 +1614,13 @@ spec:
                         A Message containing details about this condition's last transition from
                         one status to another, if any.
                       type: string
+                    observedGeneration:
+                      description: |-
+                        ObservedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
+                      format: int64
+                      type: integer
                     reason:
                       description: A Reason for this condition's last transition from
                         one status to another.
@@ -1616,8 +1667,12 @@ spec:
     schema:
       openAPIV3Schema:
         description: |-
-          A CompositionRevision represents a revision in time of a Composition.
-          Revisions are created by Crossplane; they should be treated as immutable.
+          A CompositionRevision represents a revision of a Composition. Crossplane
+          creates new revisions when there are changes to the Composition.
+
+
+          Crossplane creates and manages CompositionRevisions. Don't directly edit
+          CompositionRevisions.
         properties:
           apiVersion:
             description: |-
@@ -1865,7 +1920,7 @@ spec:
                               type: string
                             mergeOptions:
                               description: MergeOptions Specifies merge options on
-                                a field path
+                                a field path.
                               properties:
                                 appendSlice:
                                   description: Specifies that already existing elements
@@ -2279,7 +2334,7 @@ spec:
                                 type: string
                               mergeOptions:
                                 description: MergeOptions Specifies merge options
-                                  on a field path
+                                  on a field path.
                                 properties:
                                   appendSlice:
                                     description: Specifies that already existing elements
@@ -2569,6 +2624,46 @@ spec:
                 items:
                   description: A PipelineStep in a Composition Function pipeline.
                   properties:
+                    credentials:
+                      description: Credentials are optional credentials that the Composition
+                        Function needs.
+                      items:
+                        description: |-
+                          FunctionCredentials are optional credentials that a Composition Function
+                          needs to run.
+                        properties:
+                          name:
+                            description: Name of this set of credentials.
+                            type: string
+                          secretRef:
+                            description: |-
+                              A SecretRef is a reference to a secret containing credentials that should
+                              be supplied to the function.
+                            properties:
+                              name:
+                                description: Name of the secret.
+                                type: string
+                              namespace:
+                                description: Namespace of the secret.
+                                type: string
+                            required:
+                            - name
+                            - namespace
+                            type: object
+                          source:
+                            description: Source of the function credentials.
+                            enum:
+                            - None
+                            - Secret
+                            type: string
+                        required:
+                        - name
+                        - source
+                        type: object
+                      type: array
+                      x-kubernetes-list-map-keys:
+                      - name
+                      x-kubernetes-list-type: map
                     functionRef:
                       description: |-
                         FunctionRef is a reference to the Composition Function this step should
@@ -2777,7 +2872,7 @@ spec:
                                 type: string
                               mergeOptions:
                                 description: MergeOptions Specifies merge options
-                                  on a field path
+                                  on a field path.
                                 properties:
                                   appendSlice:
                                     description: Specifies that already existing elements
@@ -3059,7 +3154,7 @@ spec:
                       items:
                         description: |-
                           ReadinessCheck is used to indicate how to tell whether a resource is ready
-                          for consumption
+                          for consumption.
                         properties:
                           fieldPath:
                             description: FieldPath shows the path of the field whose
@@ -3152,6 +3247,13 @@ spec:
                         A Message containing details about this condition's last transition from
                         one status to another, if any.
                       type: string
+                    observedGeneration:
+                      description: |-
+                        ObservedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
+                      format: int64
+                      type: integer
                     reason:
                       description: A Reason for this condition's last transition from
                         one status to another.
