--- a/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_usages.yaml
+++ b/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_usages.yaml
@@ -28,8 +28,16 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A Usage defines a deletion blocking relationship between two
-          resources.
+        description: |-
+          A Usage defines a deletion blocking relationship between two resources.
+
+
+          Usages prevent accidental deletion of a single resource or deletion of
+          resources with dependent resources.
+
+
+          Read the Crossplane documentation for
+          [more information about Compositions](https://docs.crossplane.io/latest/concepts/usages).
         properties:
           apiVersion:
             description: |-
@@ -168,6 +176,13 @@ spec:
                         A Message containing details about this condition's last transition from
                         one status to another, if any.
                       type: string
+                    observedGeneration:
+                      description: |-
+                        ObservedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
+                      format: int64
+                      type: integer
                     reason:
                       description: A Reason for this condition's last transition from
                         one status to another.
