--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <kubernetes-client.version>6.13.0</kubernetes-client.version>
         <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
         <protobuf.version>3.25.1</protobuf.version>
-        <grpc.version>1.64.0</grpc.version>
+        <grpc.version>1.63.0</grpc.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
         <slf4j.version>2.0.13</slf4j.version>
         <jackson-databind.version>2.17.1</jackson-databind.version>
@@ -100,43 +100,10 @@
             <!-- Protobuf -->
             <dependency>
                 <groupId>io.grpc</groupId>
-                <artifactId>grpc-protobuf</artifactId>
+                <artifactId>grpc-bom</artifactId>
                 <version>${grpc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-stub</artifactId>
-                <version>${grpc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-core</artifactId>
-                <version>${grpc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-api</artifactId>
-                <version>${grpc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-util</artifactId>
-                <version>${grpc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-services</artifactId>
-                <version>${grpc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-inprocess</artifactId>
-                <version>${grpc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-netty-shaded</artifactId>
-                <version>${grpc.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>jakarta.annotation</groupId>
