Started on adding support for 1.17 spec. Start on provider-models to ease java development
Signed-off-by: Knut-Erik Johnsen <abstract@knut-erik.org>

--- a/.github/workflows/maven-release.yaml
+++ b/.github/workflows/maven-release.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       releaseversion:
         type: string
-        description: 'Version to reelase'
+        description: 'Version to release'
         required: true
 
 
