--- a/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_compositionrevisions.yaml
+++ b/crossplane-crd-model/src/main/resources/kubernetes/apiextensions.crossplane.io_compositionrevisions.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -78,6 +79,9 @@ spec:
                 - apiVersion
                 - kind
                 type: object
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               environment:
                 description: |-
                   Environment configures the environment in which resources are rendered.
@@ -584,17 +588,20 @@ spec:
                   Mode controls what type or "mode" of Composition will be used.
 
 
-                  "Resources" (the default) indicates that a Composition uses what is
-                  commonly referred to as "Patch & Transform" or P&T composition. This mode
-                  of Composition uses an array of resources, each a template for a composed
-                  resource.
+                  "Pipeline" indicates that a Composition specifies a pipeline of
+                  Composition Functions, each of which is responsible for producing
+                  composed resources that Crossplane should create or update.
 
 
-                  "Pipeline" indicates that a Composition specifies a pipeline
-                  of Composition Functions, each of which is responsible for producing
-                  composed resources that Crossplane should create or update. THE PIPELINE
-                  MODE IS A BETA FEATURE. It is not honored if the relevant Crossplane
-                  feature flag is disabled.
+                  "Resources" indicates that a Composition uses what is commonly referred
+                  to as "Patch & Transform" or P&T composition. This mode of Composition
+                  uses an array of resources, each a template for a composed resource.
+
+
+                  All Compositions should use Pipeline mode. Resources mode is deprecated.
+                  Resources mode won't be removed in Crossplane 1.x, and will remain the
+                  default to avoid breaking legacy Compositions. However, it's no longer
+                  accepting new features, and only accepting security related bug fixes.
                 enum:
                 - Resources
                 - Pipeline
@@ -608,6 +615,9 @@ spec:
 
                   PatchSets are only used by the "Resources" mode of Composition. They
                   are ignored by other modes.
+
+
+                  Deprecated: Use Composition Functions instead.
                 items:
                   description: |-
                     A PatchSet is a set of patches that can be reused from all resources within
@@ -984,10 +994,6 @@ spec:
 
                   The Pipeline is only used by the "Pipeline" mode of Composition. It is
                   ignored by other modes.
-
-
-                  THIS IS A BETA FIELD. It is not honored if the relevant Crossplane
-                  feature flag is disabled.
                 items:
                   description: A PipelineStep in a Composition Function pipeline.
                   properties:
@@ -1058,6 +1064,9 @@ spec:
                   - step
                   type: object
                 type: array
+                x-kubernetes-list-map-keys:
+                - step
+                x-kubernetes-list-type: map
               publishConnectionDetailsWithStoreConfigRef:
                 default:
                   name: default
@@ -1085,6 +1094,9 @@ spec:
 
                   Resources are only used by the "Resources" mode of Composition. They are
                   ignored by other modes.
+
+
+                  Deprecated: Use Composition Functions instead.
                 items:
                   description: |-
                     ComposedTemplate is used to provide information about how the composed resource
@@ -1575,7 +1587,14 @@ spec:
                   type: object
                 type: array
               revision:
-                description: Revision number. Newer revisions have larger numbers.
+                description: |-
+                  Revision number. Newer revisions have larger numbers.
+
+
+                  This number can change. When a Composition transitions from state A
+                  -> B -> A there will be only two CompositionRevisions. Crossplane will
+                  edit the original CompositionRevision to change its revision number from
+                  0 to 2.
                 format: int64
                 type: integer
               writeConnectionSecretsToNamespace:
@@ -1711,6 +1730,9 @@ spec:
                 - apiVersion
                 - kind
                 type: object
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               environment:
                 description: |-
                   Environment configures the environment in which resources are rendered.
@@ -2217,17 +2239,20 @@ spec:
                   Mode controls what type or "mode" of Composition will be used.
 
 
-                  "Resources" (the default) indicates that a Composition uses what is
-                  commonly referred to as "Patch & Transform" or P&T composition. This mode
-                  of Composition uses an array of resources, each a template for a composed
-                  resource.
+                  "Pipeline" indicates that a Composition specifies a pipeline of
+                  Composition Functions, each of which is responsible for producing
+                  composed resources that Crossplane should create or update.
 
 
-                  "Pipeline" indicates that a Composition specifies a pipeline
-                  of Composition Functions, each of which is responsible for producing
-                  composed resources that Crossplane should create or update. THE PIPELINE
-                  MODE IS A BETA FEATURE. It is not honored if the relevant Crossplane
-                  feature flag is disabled.
+                  "Resources" indicates that a Composition uses what is commonly referred
+                  to as "Patch & Transform" or P&T composition. This mode of Composition
+                  uses an array of resources, each a template for a composed resource.
+
+
+                  All Compositions should use Pipeline mode. Resources mode is deprecated.
+                  Resources mode won't be removed in Crossplane 1.x, and will remain the
+                  default to avoid breaking legacy Compositions. However, it's no longer
+                  accepting new features, and only accepting security related bug fixes.
                 enum:
                 - Resources
                 - Pipeline
@@ -2241,6 +2266,9 @@ spec:
 
                   PatchSets are only used by the "Resources" mode of Composition. They
                   are ignored by other modes.
+
+
+                  Deprecated: Use Composition Functions instead.
                 items:
                   description: |-
                     A PatchSet is a set of patches that can be reused from all resources within
@@ -2617,10 +2645,6 @@ spec:
 
                   The Pipeline is only used by the "Pipeline" mode of Composition. It is
                   ignored by other modes.
-
-
-                  THIS IS A BETA FIELD. It is not honored if the relevant Crossplane
-                  feature flag is disabled.
                 items:
                   description: A PipelineStep in a Composition Function pipeline.
                   properties:
@@ -2691,6 +2715,9 @@ spec:
                   - step
                   type: object
                 type: array
+                x-kubernetes-list-map-keys:
+                - step
+                x-kubernetes-list-type: map
               publishConnectionDetailsWithStoreConfigRef:
                 default:
                   name: default
@@ -2718,6 +2745,9 @@ spec:
 
                   Resources are only used by the "Resources" mode of Composition. They are
                   ignored by other modes.
+
+
+                  Deprecated: Use Composition Functions instead.
                 items:
                   description: |-
                     ComposedTemplate is used to provide information about how the composed resource
@@ -3208,7 +3238,14 @@ spec:
                   type: object
                 type: array
               revision:
-                description: Revision number. Newer revisions have larger numbers.
+                description: |-
+                  Revision number. Newer revisions have larger numbers.
+
+
+                  This number can change. When a Composition transitions from state A
+                  -> B -> A there will be only two CompositionRevisions. Crossplane will
+                  edit the original CompositionRevision to change its revision number from
+                  0 to 2.
                 format: int64
                 type: integer
               writeConnectionSecretsToNamespace:
