Rename the options

--- a/.github/workflows/maven-release-provider-model.yaml
+++ b/.github/workflows/maven-release-provider-model.yaml
@@ -9,7 +9,7 @@ on:
         required: true
       provider:
         type: string
-        description: 'Version to release'
+        description: 'Provider to release'
         required: true
         options:
           - provider-upjet-azure
