Updated parent to 1.17-beta
Signed-off-by: Knut-Erik Johnsen <abstract@knut-erik.org>

--- a/provider-models/crossplane-provider-upjet-azure/pom.xml
+++ b/provider-models/crossplane-provider-upjet-azure/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.crossplane.providers</groupId>
         <artifactId>crossplane-providers-parent</artifactId>
-        <version>1.17.0-alpha</version>
+        <version>1.17.0-beta</version>
     </parent>
 
     <artifactId>crossplane-provider-upjet-azure-model</artifactId>
