Add provider kubernetes. Update to new parent. Add exclude on io.crossplane.* for javadocs

--- a/crossplane-providers-parent/pom.xml
+++ b/crossplane-providers-parent/pom.xml
@@ -112,7 +112,7 @@
                 <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
                     <doclint>all,missing</doclint>
-                    <excludePackageNames>io.upbound.*</excludePackageNames>
+                    <excludePackageNames>io.upbound.*,io.crossplane.*</excludePackageNames>
                 </configuration>
 
                 <executions>
