Add kubernetes provider

--- a/.github/workflows/maven-release-provider-model.yaml
+++ b/.github/workflows/maven-release-provider-model.yaml
@@ -18,6 +18,7 @@ on:
           - provider-upjet-gcp
           - provider-upjet-github
           - provider-terraform
+          - provider-kubernetes
 
 
 jobs:
